# ECCB2026_TEST

./: .gitignore  README.md  requirements.txt
sessions/session-0-data-process/: data_process.ipynb
sessions/session-1-intro-networks/: README.md
sessions/session-1-intro-networks/practical-1/: README.md
sessions/session-2-multi-omics/: README.md  llm_mofa_skills.py  part-1-linear-methods.ipynb  part-2-correlation-based-methods.ipynb  part-3-deep-learning-methods.ipynb
sessions/session-2-multi-omics/practical-2/: README.md
sessions/session-3-agentic-llm-workflows/: .gitignore  README.md  pyproject.toml  requirements.txt
sessions/session-3-agentic-llm-workflows/assets/: session2-outputs.docx  session3-examples.docx
sessions/session-3-agentic-llm-workflows/data/: README.md
sessions/session-3-agentic-llm-workflows/notebooks/: 01_tools.ipynb  02_MCP.ipynb  03_agent_skills.ipynb  README.md
sessions/session-3-agentic-llm-workflows/planning/: session-3-framework-plan.md
sessions/session-3-agentic-llm-workflows/practical-3/: README.md
sessions/session-3-agentic-llm-workflows/server/: README.md  toy_kg_mcp_server.py
sessions/session-3-agentic-llm-workflows/skills/: biomedical-kg-agent.SKILL.md
sessions/session-3-agentic-llm-workflows/slides/: session-3-agentic-llm-kg.pptx
sessions/session-3-agentic-llm-workflows/src/: __init__.py  graph_tools.py  mofa_tools.py
sessions/session-4-kg-query-mini-challenge/: README.md
sessions/session-4-kg-query-mini-challenge/practical-4/: README.md
