[project]
name = "eccb2026-tutorial-materials"
version = "0.1.0"
description = "Materials for the ECCB 2026 tutorial on knowledge graphs, multi-omics, and LLM agents."
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.3",
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "jupyterlab>=4.0",
  "ipykernel>=6.29",
  "python-dotenv>=1.0",
  "mcp>=1.0",
  "langchain-core>=1.0",
  "langchain-anthropic>=1.0",
  "langchain-mcp-adapters>=0.3",
]

[tool.ruff]
line-length = 88

